--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,9 +1,10 @@
 .container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
 .btn {
-  margin: 1em;
+  margin: 0.5rem;
 }
