--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .btn {
   margin: 0.5rem;
+}
+
+.header{
+  text-align: left;
 }
